--- a/CSS/styles-nav.css
+++ b/CSS/styles-nav.css
@@ -40,15 +40,19 @@
 @media (max-width: 768px) {
     .barra-navegacao{
         flex-direction: column;
-        height: 1000px;
+        height: auto;
+        padding: 2px 0;
     }
 
     .barra-navegacao > ul{
         flex-direction: column;
         width: 100%;
+        height: auto;
     }
 
     .barra-navegacao > ul > li{
         width: 100%;
+        font-size: 20px;
+        padding: 7px 0;
     }
 }
