--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url('./CSS/styles-header.css');
 @import url('./CSS/styles-nav.css');
+@import url('./CSS/styles-index.css');
 
 *{
     margin: 0;
@@ -8,5 +9,12 @@
 
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+main{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
