finalizacao do index

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url('./CSS/styles-header.css');
 @import url('./CSS/styles-nav.css');
+@import url('./CSS/styles-footer.css');
 @import url('./CSS/styles-index.css');
 
 *{
@@ -16,5 +17,23 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+body::-webkit-scrollbar {
+    width: 7px; 
+}
+
+body::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+    border-radius: 20px; 
+}
+
+body::-webkit-scrollbar-thumb {
+    background: #888; 
+    border-radius: 10px; 
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background: #555; 
 }
 
