--- a/CSS/styles-index.css
+++ b/CSS/styles-index.css
@@ -2,10 +2,10 @@
     display: flex;
     flex-direction: column;
     width: 80%;
-    height: 500px;
+    height: auto;
     align-items: center;
     font-size: 30px;
-    margin-top: 30px;
+    margin: 30px 0;
 }
 
 .produtos-organizados{
@@ -14,14 +14,61 @@
     width: 100%;
     height: 100%;
     flex-wrap: wrap;
-    align-items: center;
 }
 
 .card-produto{
     width: 254px;
     height: 386px;
-    border: solid black 1px;
-    border-radius: 0.5em;
-    margin-top: auto;
-    margin-bottom: 5px;
+    border: solid rgb(122, 122, 122) 1px;
+    background-color: white;
+    border-radius: 0.2em;
+    margin-top: 50px;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.card-produto > img{
+    width: 100%;
+    height: 60%;
+}
+
+.textos{
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
+    font-size: 16px;
+    gap: 30px;
+}
+
+.preco{
+    color: rgb(116, 116, 116);
+}
+
+.banner{
+    margin: 50px 0;
+    width: 85%;
+    height: auto;
+}
+.banner > img{
+    width: 100%;
+}
+
+
+/* Responsividade */
+
+@media (max-width: 654px) {
+    .secao-produtos{
+        margin-bottom: 70px;
+    }
+    
+    .produtos-organizados{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: nowrap;
+    }
+
+    .banner{
+        display: none;
+    }
 }
